--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div id="text">
-		<p>Welcome to the world of Web developement></p>
+		<p><strong>Welcome to the world of Web developement></strong></p>
 	</div>
 
 
